# skia

./: .gitignore  CMakeLists.ext  CMakeLists.txt  README  build.ninja  build.ninja.d  cmake_android.cmake  cmake_avx.cmake  cmake_bench.cmake  cmake_bookmaker.cmake  cmake_effects.cmake  cmake_example.cmake  cmake_experimental_svg_model.cmake  cmake_fuzz.cmake  cmake_gm.cmake  cmake_gpu.cmake  cmake_gpu_tool_utils.cmake  cmake_helloworld.cmake  cmake_list_gms.cmake  cmake_lua_app.cmake  cmake_mac.cmake  cmake_modules__skottie.cmake  cmake_modules__sksg.cmake  cmake_modules__sksg_tests.cmake  cmake_nanobench.cmake  cmake_pathops_unittest.cmake  cmake_pdf.cmake  cmake_raw.cmake  cmake_samples.cmake  cmake_sk_app.cmake  cmake_skcms.cmake  cmake_skia.cmake  cmake_skiaserve.cmake  cmake_sktexttopdf.cmake  cmake_sse41.cmake  cmake_sse42.cmake  cmake_tests.cmake  cmake_third_party__Nima.cmake  cmake_third_party__dng_sdk.cmake  cmake_third_party__harfbuzz.cmake  (+12 more)
androidtest/: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
androidtest/nativeactivity/: build.gradle
androidtest/nativeactivity/src/main/cpp/: CMakeLists.txt  Instancing.cpp  Texture2D.h  esUtil.cpp
cmake/: CMakeLists.ext  CMakeLists.txt  build.ninja  build.ninja.d  project.json  toolchain.ninja
cmake/spirv-tools/: build-version.inc
docs/: Skia_Structure.md
example/: HelloWorld.cpp  SkiaSDLExample.cpp  example.cpp
samplecode/: SampleNima.cpp  SampleNimaActor.h
src/core/: SkString.cpp
tools/gpu/: GrContextFactory.cpp
tools/viewer/: NIMASlide.h  Viewer.cpp
(+12 files in other folders)
